--- a/config/locales/custom/de-DE/cli.yml
+++ b/config/locales/custom/de-DE/cli.yml
@@ -5,4 +5,7 @@ de:
       win_title: Gewinne tolle Preise!
       win_text: Unter allen Teilnehmenden verlosen wir Kino- und Büchergutscheine, Leckereien, einen Besuch im Freizeitpark und vieles mehr – seid gespannt!
       partner_title: Partner
+      partner_text: "Projektträger: Europäische Akademie Bayern e.V. <br> Projektpartner: ROCK YOUR LIFE! gGmbH, Akademie für Philosophische Bildung und WerteDialog (gfi gGmbH), Mehr Demokratie e.V. Bayern, eKairos GmbH <br> | Gefördert durch die Stiftung Wertebündnis Bayern"
+
+
 
