--- a/config/locales/custom/de-DE/sign_up.yml
+++ b/config/locales/custom/de-DE/sign_up.yml
@@ -6,22 +6,33 @@ de:
         information: Information
       progress_bar:
         user_info: Email-Verifikation
-        user_details: Einwohnermelde-Abgleich
+        user_location: Wohnort
+        user_details: Datenabgleich
         complete: Abschluss
       new:
         information_details: Bitte melden Sie sich mit Ihrem richtigen Vornamen und Nachnamen (Klarnamen) an. Nur mit einer vollständigen Verifizierung können Sie aktiv mitdiskutieren, Ihre Vorschläge einbringen oder bei Abstimmungen mitmachen. Wenn Sie dies nicht möchten, können Sie sich aber weiterhin wie gewohnt auf der Webseite bewegen und informieren.
         bullet_1: Email-Verifikation
         bullet_1_text: Im ersten Schritt müssen Sie ein Konto anlegen, indem Sie ihre E-Mail-Adresse sowie ein Passwort angeben. Die angegebene E-Mail-Adresse muss im Anschluss, mit Klick auf den zugeschickten Link für die Verifizierung, bestätigt werden.
-        bullet_2: Einwohnermelde-Abgleich
-        bullet_2_text: "Mit Klick auf den Link werden Sie zur zweiten Verifizierungsstufe weitergeleitet. Dort müssen Sie Ihren Vor- und Nachnamen und weitere Informationen bereitstellen, die mit dem Einwohnermeldeamt abgeglichen werden. Beim Abgleich wird zwischen Bürger:innen der Stadt Bamberg und Bürger:innen aus anderen Gebieten Deutschlands unterschieden:"
-        bullet_2_extra_html: "<ul><li>Bamberger:innen werden automatisiert verifiziert und können direkt aktiv teilnehmen</li><li>Bürger:innen aus anderen Gebieten Deutschlands bekommen einen Code per Post und können nach Abschluss der Anmeldung teilnehmen</li></ul>"
-        bullet_3: Abschluss der Verifizierung
+        bullet_2: Wohnort
+        bullet_2_text: Mit Klick auf den Link werden Sie zur zweiten Verifizierungsstufe weitergeleitet. Bitte geben Sie in diesem Schritt an, ob Sie Bürger:in der Stadt Bamberg sind oder aus einem anderen Gebiet Deutschlands kommen.
+        bullet_2_extra_html: "<ul><li>Bamberger:innen werden im nächsten Schritt automatisch per Einwohnermelde-Abgleich verifiziert und können direkt aktiv teilnehmen</li><li>Bürger:innen aus anderen Gebieten Deutschlands bekommen einen Code per Post und können nach Abschluss der Anmeldung teilnehmen</li></ul>"
+        bullet_3: Einwohnermelde-Abgleich
+        bullet_3_text: Im dritten Schritt müssen Sie Ihren Vor- und Nachnamen und weitere Informationen bereitstellen, die mit dem Einwohnermeldeamt abgeglichen werden. Allen Bürger:innen, die aus anderen Gebieten Deutschlands kommen, wird ein Verifzierungscode per Post zugeschickt.
+        bullet_4: Abschluss der Verifizierung
         submit: Registrierung starten
       user_info:
         information_details: Bitte geben Sie Ihre E-Mail-Adresse sowie ein sicheres Passwort an. Wir senden Ihnen eine Bestätigungsmail mit dem Verifizierungslink, der Ihr Konto bestätigt und zur nächsten Stufe weiterleitet.
         submit: Per E-Mail registrieren
+      user_location:
+        information_details: Bitte geben Sie an, ob Sie Bürger:in der Stadt Bamberg sind oder aus einem anderen Gebiet Deutschlands kommen.
+        option:
+          citizen: Ich bin Bürger:in der Stadt Bamberg
+          not_citizen: Ich komme aus einem anderen Gebiet Deutschlands
+        submit: Wohnort bestätigen
       user_details:
-        information_details: Bitte geben Sie Ihren Vor- und Nachnamen und weitere persönliche Daten an. So wird sichergestellt, dass bei einzelnen Themen und Abstimmungen keine unbefugten Personen teilnehmen können. Die Verifizierung kann bis zu fünf Minuten dauern. Nach Abschluss der Verifizierung erhalten Sie von uns eine Email mit der Bestätigung Ihrer Anmeldung oder dem Hinweis auf etwaige Fehler.
+        information_details:
+          citizen: Bitte geben Sie Ihren Vor- und Nachnamen und weitere persönliche Daten an. So wird sichergestellt, dass bei einzelnen Themen und Abstimmungen keine unbefugten Personen teilnehmen können. Die Verifizierung kann bis zu fünf Minuten dauern. Nach Abschluss der Verifizierung erhalten Sie von uns eine Email mit der Bestätigung Ihrer Anmeldung oder dem Hinweis auf etwaige Fehler.
+          not_citizen: Bitte geben Sie Ihren Vor- und Nachnamen und weitere persönliche Daten an. So wird sichergestellt, dass bei einzelnen Themen und Abstimmungen keine unbefugten Personen teilnehmen können. Sie erhalten nach Abschluss der Verifizierung einen Code, den wir Ihnen per Post zusenden. Im Anschluss müssen Sie den Code einmalig bei der ersten Anmeldung eingeben.
         first_name_placeholder: Vorname
         last_name_placeholder: Nachname
         plz_placeholder: Postleitzahl
@@ -51,3 +62,8 @@ de:
           text: "Ihre Verifizierung konnte nicht abgeschlossen werden. Folgende Daten haben keine Übereinstimmung mit dem Melderegister ergeben:"
           url_cta: "Bitte versuchen Sie es erneut unter:"
           url_anchor: www.bamberg-gestalten.de
+        residence_confirmation_code:
+          subject: Anleitung zur Bestätigung
+          greeting: Hallo
+          text_html: vielen Dank für Ihre Verifizierung. Wir prüfen nun Ihre Daten und schicken Ihnen einen Code postalisch zu. Bitte melden Sie sich nach Erhalt des Codes unter <a href="https://www.bamberg-gestalten.de/">www.bamberg-gestalten.de</a> an und geben Sie dort den Code ein.
+
