--- a/config/locales/custom/de-DE/cli.yml
+++ b/config/locales/custom/de-DE/cli.yml
@@ -8,7 +8,7 @@ de:
       partner_title: Partner
       partner_text: "Projektträger: Europäische Akademie Bayern e.V. <br> Projektpartner: ROCK YOUR LIFE! gGmbH, Akademie für Philosophische Bildung und WerteDialog (gfi gGmbH), Mehr Demokratie e.V. Bayern, eKairos GmbH <br> | Gefördert durch die Stiftung Wertebündnis Bayern"
       buttons:
-        start_survey: Umfrage starten
+        start_survey: Zur Umfrage
         infomaterial: Infomaterial
 
 
