minor view changes

--- a/config/locales/custom/de-DE/projekts.yml
+++ b/config/locales/custom/de-DE/projekts.yml
@@ -15,11 +15,11 @@ de:
             title: Projektphasen
             debate_phase: Diskussionsphase
             debate_phase_link: Zur Übersicht aller Diskussionen
-            debate_phase_button: Starten Sie eine Diskussion
+            debate_phase_button: Starte eine Diskussion
             debate_phase_not_active: Diskussionsphase nicht aktiviert
             proposal_phase: Vorschlagsphase
             proposal_phase_link: Zur Übersicht aller Vorschläge
-            proposal_phase_button: Vorschlag erstellen
+            proposal_phase_button: Idee erstellen
             proposal_phase_not_active: Vorschlagsphase nicht aktiviert
             voting_phase: Abstimmungsphase
             voting_phase_link: Zu den Abstimmungen
