--- a/config/locales/custom/de-DE/sign_up.yml
+++ b/config/locales/custom/de-DE/sign_up.yml
@@ -39,14 +39,14 @@ de:
         street_name_placeholder: Straße
         house_number_placeholder: Hausnummer
         city_name_placeholder: Stadt
-        document_number_placeholder: Letzten fünf Ziffern auf Dokument
+        document_number_placeholder: Letzten vier Zeichen auf Dokument
         card_name: '1) Personalausweis'
         pass_name: '2) Reisepass'
         tips: 'Hinweis:'
         card_label: '1) Personalausweis Rückseite'
-        card_help: 'Letzte fünf Ziffern auf Personalausweis Rückseite:'
+        card_help: 'Letzte vier Ziffern auf Personalausweis Rückseite:'
         pass_label: '2) Reisepass Vorderseite'
-        pass_help: 'Letzte fünf Ziffern auf Reisepass Vorderseite:'
+        pass_help: 'Letzte vier Ziffern auf Reisepass Vorderseite:'
         submit: Einwohnermelde-Abgleich starten
       complete_code:
         welcome: Herzlichen Glückwunsch!
