--- a/config/locales/custom_updates/de-DE/activerecord.yml
+++ b/config/locales/custom_updates/de-DE/activerecord.yml
@@ -1,4 +1,16 @@
 de:
+  activemodel:
+    errors:
+      models:
+        officing/residence:
+          attributes:
+            document_number:
+              length: muss genau 4 Zeichen lang sein
+            postal_code:
+              format: muss 5 Ziffern enthalten
+            first_name:
+              uniqueness_check: die Kombination aus Vorname, Nachname, Geburtsdatum und PLZ muss eindeutig sein
+      
   activerecord:
     models:
       deficiency_report:
@@ -13,7 +25,15 @@ de:
             plz:
               format: muss 5 Ziffern enthalten
             first_name:
-              uniqueness_check: Die Kombination aus Vorname, Nachname, Geburtsdatum und PLZ muss eindeutig sein
+              uniqueness_check: die Kombination aus Vorname, Nachname, Geburtsdatum und PLZ muss eindeutig sein
+        officing/residence:
+          attributes:
+            document_number:
+              length: muss genau 4 Zeichen lang sein
+            plz:
+              format: muss 5 Ziffern enthalten
+            first_name:
+              uniqueness_check: die Kombination aus Vorname, Nachname, Geburtsdatum und PLZ muss eindeutig sein
         proposal:
           attributes:
             description:
