--- a/config/locales/custom/de-DE/general.yml
+++ b/config/locales/custom/de-DE/general.yml
@@ -184,7 +184,7 @@ de:
     local_census_records/import: Import von Datensätzen aus dem lokalen Register
     site_customization/content_block: Inhaltsblöcke
     site_customization/page: Seite
-    deficiency_report: Mangelmeldung
+    deficiency_report: Anliegen
   geozones:
     none: Alle Bereiche
   layouts:
