--- a/config/locales/custom/de-DE/setting.yml
+++ b/config/locales/custom/de-DE/setting.yml
@@ -163,18 +163,18 @@ de:
           show_newsfeed_in_projekt_footer_description: Aktiviert den News-Feed in der Fußzeile eines Projekts
 
       deficiency_reports:
-        show_in_main_menu: Mängelmelder in Navigation anzeigen
-        show_in_main_menu_description: Zeigt den Mängelmelder in der Hauptnavigation an
+        show_in_main_menu: Anliegen in Navigation anzeigen
+        show_in_main_menu_description: Zeigt Anliegen in der Hauptnavigation an
         admins_must_assign_officer: Admins müssen Sachbearbeiter*in zuweisen
-        admins_must_assign_officer_description: Administratoren weisen Mangel an Sachbearbeiter*in zu
+        admins_must_assign_officer_description: Administratoren weisen Anliegen an Sachbearbeiter*in zu
         admins_must_approve_officer_answer: Admins müssen Antwort der Sachbearbeiter*innen freigeben
         admins_must_approve_officer_answer_description: Administratoren geben die Antwort der Sachbearbeiter*in vor Veröffentlichung frei
-        allow_voting: Nutzer*innen Bewertung pro Mangel
-        allow_voting_description: Aktiviert die Nutzer*innen-Bewertung für den Mängelmelder
+        allow_voting: Nutzer*innen Bewertung pro Anliegen
+        allow_voting_description: Aktiviert die Nutzer*innen-Bewertung für das Anliegen
         enable_comments: Kommentarfunktion
-        enable_comments_description: Nutzer*innen können unterhalb eines Mangels kommentieren
-        intro_text: Einleitungstext für den Mängelmelder
-        intro_text_description: Aktivieren Sie einen individuellen Einleitungstext oberhalb der Mängelübersichtsseite
+        enable_comments_description: Nutzer*innen können unterhalb eines Anliegens kommentieren
+        intro_text: Einleitungstext für die Anliegen
+        intro_text_description: Aktivieren Sie einen individuellen Einleitungstext oberhalb der Anliegenübersichtsseite
 
       projekt_newsfeed:
         id: Newsfeed ID 
