--- a/config/locales/custom_updates/de-DE/deficiency_reports.yml
+++ b/config/locales/custom_updates/de-DE/deficiency_reports.yml
@@ -4,46 +4,46 @@ de:
       index:
         deficiency_report:
           by: von
-        start_deficiency_report: Mangel melden
+        start_deficiency_report: Ihr Anliegen melden
         seo:
-          title: Mängelmelder
+          title: Ihr Anliegen
         search_form:
-          title: Suche Mängelmeldungen
-          placeholder: Suche Mängelmeldungen...
-          button: search
+          title: Suche nach Anliegen
+          placeholder: Anliegen durchsuchen...
+          button: suchen
         section_header:
-          title: Mängelmelder
-          icon_alt: Mängelmelder
-          help: Hilfe zu Mängelmeldungen
+          title: Ihr Anliegen
+          icon_alt: Ihr Anliegen
+          help: Hilfe zu Ihrem Anliegen
         sidebar:
           categories:
             title: Kategorien
             filter_button: Kategorien filtern
           statuses:
             title: Status
-            all_statuses: Alle Meldungen
+            all_statuses: Alle Anliegen
           officer_filter:
             title: Sachbearbeiter
-            all_reports: Alle Meldungen
-            only_current_user: Mir zugewiesene Meldungen
+            all_reports: Alle Anliegen
+            only_current_user: Mir zugewiesene Anliegen
           approval_status_filter:
             title: Admin
-            all_reports: Alle Meldungen
-            reports_to_approve: Freizugebende Meldungen
+            all_reports: Alle Anliegen
+            reports_to_approve: Freizugebende Anliegen
         orders:
           hot_score: Aktivste
           newest: Neuste
           most_commented: Am meisten kommentiert
         section_footer:
-          title: Hilfe zu Mängelmeldungen
-          description: Mängel können, abhängig vom eingestellten Verifizierungsverfahren, von jeder Benutzerin und jedem Benutzer eingebracht werden. Sie bieten eine einfache Möglichkeit auf Mängel in der Stadt hinzuweisen. Wir danken für Ihre Unterstützung!
+          title: Hilfe zu Anliegen
+          description: Anliegen können, abhängig vom eingestellten Verifizierungsverfahren, von jeder Benutzerin und jedem Benutzer eingebracht werden. Sie bieten eine einfache Möglichkeit auf Dinge in der Stadt hinzuweisen. Wir danken für Ihre Unterstützung!
       show:
-        back_link: "Zurück zu alle Meldungen"
+        back_link: "Zurück zu allen Anliegen"
         official_answer: Offizielle Antwort
         submit_official_answer_button: Antwort speichern
         approve_official_answer: Antwort freigeben
         sidebar:
-          delete: Mangel löschen
+          delete: Anliege löschen
           vote: Unterstützer*innen
           status: Status
           category: Kategorien
@@ -52,30 +52,30 @@ de:
           social_share: Teilen
 
       new:
-        start_new: Einen Mangel melden
-        recommendations_title: Empfehlungen zum Erstellen eines Mangels
+        start_new: Ihr Anliegen melden
+        recommendations_title: Empfehlungen zum Erstellen eines Anliegens
         recommendation_one: Verwenden Sie bitte nicht ausschließelich Großbuchstaben für die Überschrift oder für komplette Sätze. Im Internet gilt das als Schreien und niemand möchte angeschrien werden.
         recommendation_two: Diskussionen oder Kommentare, die illegale Handlungen beinhalten, werden gelöscht sowie diejenigen, die die Diskussionen absichtlich sabotieren. Alles andere ist erlaubt.
         recommendation_three: Genießen Sie diesen Ort und die Stimmen, die ihn füllen. Er gehört auch Ihnen.
         more_info: Mehr Informationen
         seo:
-          title: Einen Mangel melden
+          title: Ein Anliegen melden
       form:
         category:
           placeholder: Bitte wählen
         labels:
-          title: Titel des Mangels
-          summary: Zusammenfassung des Mangel
-          description: Text zum Mangel
+          title: Titel Ihres Anliegens
+          summary: Zusammenfassung des Anliegens
+          description: Text zum Anliegen
         new:
-          submit_button: Mangel melden
+          submit_button: Anliegen melden
         create:
-          submit_button: Mangel melden
+          submit_button: Anliegen melden
       mailers:
         notify_administrators_about_new_deficiency_report:
-          subject: "Neue Mangelmeldung %{identifier}"
+          subject: "Neues Anliegen %{identifier}"
           hi: Lieber Admin,
-          p1: es wurde ein neuer Mangel gemeldet.
+          p1: es wurde ein neues Anliegen gemeldet.
           signature_html: Viele Grüße</br>Consul
         notify_administrators_about_answer_update:
           subject: "Neue offizielle Antwort von einem/einer Sachbearbeiter*in %{identifier}"
@@ -83,14 +83,14 @@ de:
           p1: ein/e Sachbearbeiter*in hat eine neue offizielle Antwort gespeichert.
           signature_html: Viele Grüße</br>Consul
         notify_author_about_status_change:
-          subject: Statusänderung Ihres Mangels
+          subject: Statusänderung Ihres Anliegens
           hi: Hallo
-          p1: der Status des von Ihnen eingereichten Mangels wurde geändert.
+          p1: der Status des von Ihnen eingereichten Anliegens wurde geändert.
           signature_html: Viele Grüße</br>Consul
         notify_officer:
-          subject: "Neue Mangelmeldung %{identifier}"
+          subject: "Neues Anliegen %{identifier}"
           hi: Liebe/r Sachbearbeiter*in,
-          p1: Ihnen wurde ein Mangel vom Admin zugewiesen.
+          p1: Ihnen wurde ein Anliegen vom Admin zugewiesen.
           signature_html: Viele Grüße</br>Consul
       notifications:
         official_answer_updated: 'Antwort wurde erfolgreich gespeichert'
