--- a/config/locales/custom_updates/de-DE/cli.yml
+++ b/config/locales/custom_updates/de-DE/cli.yml
@@ -13,3 +13,6 @@ de:
     account:
       settings:
         custom_newsletter: E-Mail-Benachrichtigungen über Consul, Bürgerbeteiligung und Demokratieentwicklung.
+    links:
+      menu:
+        custom_newsletter: Newsletter
