--- a/config/locales/custom_updates/de-DE/base.yml
+++ b/config/locales/custom_updates/de-DE/base.yml
@@ -92,7 +92,7 @@ de:
         account_link: Konto
         notification_item:
           no_notifications: Keine Benachrichtigungen
-        title_html: "Öffentlichkeitsbeteiligung<br><span>in der Stadt"
+        title_html: "Öffentlichkeitsbeteiligung<br><span>von Stadt und Landkreis"
         logo_alt: Stadt Logo
       footer:
         demokratie: demokratie.today
