--- a/config/locales/custom/de-DE/devise_views.yml
+++ b/config/locales/custom/de-DE/devise_views.yml
@@ -120,7 +120,7 @@ de:
           username_is_available: Benutzer*innenname verfügbar
           username_is_not_available: Benutzer*innenname bereits vergeben
           username_label: Benutzer*innenname
-          username_note: Name, der öffentlich neben ihren Beiträgen angezeigt wird
+          username_note: Bitte verwenden Sie Ihren Klarnamen
         success:
           back_to_index: Ich verstehe; zurück zur Startseite
           instructions_1: Bitte <b>überprüfen Sie Ihren E-Mail-Eingang</b> - wir haben Ihnen einen <b>Link zur Bestätigung Ihres Kontos</b> geschickt.
