--- a/config/locales/custom_updates/de-DE/cli.yml
+++ b/config/locales/custom_updates/de-DE/cli.yml
@@ -1,11 +1,5 @@
 de:
   custom:
-    devise_views:
-      users:
-        registrations:
-          new:
-            custom_newsletter_title: Ja, ich möchte weiter über Consul, Bürgerbeteiligung und Demokratieentwicklung informiert werden.
-            custom_newsletter_label: Ja, ich möchte weiter über Consul, Bürgerbeteiligung und Demokratieentwicklung informiert werden.
     admin:
       users:
         columns:
@@ -16,3 +10,13 @@ de:
     links:
       menu:
         custom_newsletter: Newsletter
+  cli:
+    devise_views:
+      mailer:
+        confirmation_instructions:
+          greeting: "Guten Tag %{name},"
+          p1: danke für Ihr Interesse an unserer Veranstaltung «Mehr Demokratie im Gespräch». Sie müssen Ihre Anmeldung jetzt nur noch durch den Klick auf einen der nachfolgenden Links bestätigen.
+          p2: "Auch Ihr Engagement entscheidet, ob wir mit unseren Aktionen erfolgreich sind. Wir möchten Sie daher auch zukünftig per E-Mail informieren. Unseren Newsletter können Sie jederzeit abbestellen. Bitte klicken Sie hier:"
+          cta_with_newsletter: Ich bestätige meine E-Mailadresse und möchte Infos per E-Mail
+          cta_without_newsletter: Ich bestätige meine E-Mailadresse und verzichte auf Infos per E-Mail
+          expiration_warning: (Dieser Link ist aus Sicherheitsgründen nur 24 Stunden aktiv. Bitte melden Sie sich erneut an, falls Sie in dieser Zeitspanne Ihren Eintrag nicht erfolgreich bestätigen konnten.)
