--- a/config/locales/custom_updates/de-DE/base.yml
+++ b/config/locales/custom_updates/de-DE/base.yml
@@ -56,6 +56,9 @@ de:
         projekt_phase_not_active: Die Projektphase ist nicht aktiv
 
     devise_views:
+      sessions:
+        new:
+          title: Mitglieder-Login
       users:
         registrations:
           new:
